# QuizBuilderAI

./: .gitignore  .gitmodules  ChatHistory.txt  README.md  caller.py  chatReader.py  chater.py  main.py  other.py  pyproject.toml  textChat.py  tryagent.py  voiceInput.py
func/: agentPrompter.py  voicer.py
multimodal/: imgInput.py  voiceInput.py
src/: botSet.json  botSetEn.json  index.py  try.py  x.py
src/loaders/: audio.py  common.py  csv.py  dc.py  docx.py  epub.py  evernote.py  gitbook.py  html.py  image.py  markdown.py  mastodont.py  messenger.py  notebook.py  odt.py  pdf.py  pdf2.py  powerpoint.py  slack.py  telegram.py  txt.py  web.py  whatsapp.py  youtube.py
tools/: voicer.py
